--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,41 @@
-name: Ngrok Proxy Tunnel
+name: 3Proxy Ngrok Tunnel
 
 on:
   workflow_dispatch:
 
 jobs:
-  tunnel:
+  proxy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Install TinyProxy
+      - name: Install 3Proxy
         run: |
           sudo apt update
-          sudo apt install tinyproxy -y
-          sudo sed -i 's/^#Allow 127.0.0.1/Allow 0.0.0.0/' /etc/tinyproxy/tinyproxy.conf
-          sudo sed -i 's/^Port 8888/Port 8080/' /etc/tinyproxy/tinyproxy.conf
-          sudo systemctl restart tinyproxy
-          echo "TinyProxy started on port 8080"
+          sudo apt install git build-essential -y
+          git clone https://github.com/z3APA3A/3proxy.git
+          cd 3proxy
+          make -f Makefile.Linux
+          sudo mkdir -p /etc/3proxy/logs
+          sudo cp src/3proxy /usr/local/bin/
+          echo "nscache 65536
+          config /etc/3proxy/3proxy.cfg
+          monitor /etc/3proxy/3proxy.cfg
+          log /etc/3proxy/logs/3proxy.log D
+          logformat "- +_L%t.%. %p %c:%C %r:%R %O %I %h %T"
+          proxy -p3128" > 3proxy.cfg
+          sudo cp 3proxy.cfg /etc/3proxy/3proxy.cfg
+          sudo nohup /usr/local/bin/3proxy /etc/3proxy/3proxy.cfg &
 
-      - name: Download & Configure Ngrok
+      - name: Install & Start Ngrok Tunnel
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
           ngrok config add-authtoken 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
-
-      - name: Start Ngrok TCP Tunnel
-        run: |
-          nohup ngrok tcp 8080 > ngrok.log 2>&1 &
+          nohup ngrok tcp 3128 > ngrok.log 2>&1 &
           sleep 10
-          cat ngrok.log | grep -Eo "tcp://[0-9a-zA-Z.:]+" | head -n 1
+          cat ngrok.log | grep -Eo "tcp://[a-z0-9.:]+" | head -n 1
 
-      - name: Keep Workflow Alive
+      - name: Keep Workflow Running
         run: tail -f /dev/null
         
