--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,35 +8,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install 3Proxy
+      - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install git build-essential -y
+
+      - name: Clone and build 3Proxy
+        run: |
           git clone https://github.com/z3APA3A/3proxy.git
           cd 3proxy
           make -f Makefile.Linux
-          sudo mkdir -p /etc/3proxy/logs
+          sudo mkdir -p /usr/local/etc/3proxy /usr/local/3proxy/logs
           sudo cp src/3proxy /usr/local/bin/
           echo "nscache 65536
-          config /etc/3proxy/3proxy.cfg
-          monitor /etc/3proxy/3proxy.cfg
-          log /etc/3proxy/logs/3proxy.log D
+          config /usr/local/etc/3proxy/3proxy.cfg
+          monitor /usr/local/etc/3proxy/3proxy.cfg
+          log /usr/local/3proxy/logs/3proxy.log D
           logformat \"- +_L%t.%. %p %c:%C %r:%R %O %I %h %T\"
-          proxy -p3128" > 3proxy.cfg
-          sudo cp 3proxy.cfg /etc/3proxy/3proxy.cfg
-          sudo nohup /usr/local/bin/3proxy /etc/3proxy/3proxy.cfg &
+          proxy -p3128" | sudo tee /usr/local/etc/3proxy/3proxy.cfg
+          sudo nohup /usr/local/bin/3proxy /usr/local/etc/3proxy/3proxy.cfg &
 
-      - name: Install Ngrok and Start TCP Tunnel
+      - name: Install Ngrok and start tunnel
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
           ngrok config add-authtoken 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
           nohup ngrok tcp 3128 > /dev/null 2>&1 &
-          sleep 15
-          echo "Ngrok Proxy Link:"
-          curl --silent http://127.0.0.1:4040/api/tunnels | grep -oE "tcp://[^\"]+"
+          sleep 10
+          echo "Proxy is live at:"
+          curl -s http://127.0.0.1:4040/api/tunnels | grep -oE "tcp://[^\"]+"
 
-      - name: Keep Alive
+      - name: Keep it running
         run: tail -f /dev/null
         
