--- a/.github/workflows/Cloudflare.yml
+++ b/.github/workflows/Cloudflare.yml
@@ -1,20 +1,19 @@
-name: Tinyproxy + Cloudflare Tunnel
+name: Tinyproxy + TryCloudflare
 
 on:
-  push:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'  # Restart every 6 hours to keep it alive
+    - cron: '0 */6 * * *'
 
 jobs:
   tunnel:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Update & install dependencies
+    - name: Install Tinyproxy
       run: |
         sudo apt update
-        sudo apt install -y tinyproxy curl
+        sudo apt install -y tinyproxy
 
     - name: Configure Tinyproxy
       run: |
@@ -24,18 +23,20 @@ jobs:
         sudo sed -i 's/^Bind 127.0.0.1/#Bind 127.0.0.1/' /etc/tinyproxy/tinyproxy.conf
         sudo systemctl restart tinyproxy
 
-    - name: Download Cloudflare Tunnel
+    - name: Download cloudflared (Cloudflare Tunnel)
       run: |
-        curl -s https://raw.githubusercontent.com/cloudflare/cloudflared/master/scripts/install.sh | sudo bash
+        wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
+        chmod +x cloudflared-linux-amd64
+        sudo mv cloudflared-linux-amd64 /usr/local/bin/cloudflared
 
-    - name: Start Cloudflare Tunnel
+    - name: Start Tunnel
       run: |
         nohup cloudflared tunnel --url http://localhost:8888 > tunnel.log 2>&1 &
         sleep 10
-        cat tunnel.log | grep "trycloudflare.com" || cat tunnel.log
+        cat tunnel.log | grep -o 'https://.*\.trycloudflare\.com' || echo "Tunnel URL not found."
 
     - name: Show Tunnel URL
       run: |
-        echo "Cloudflare Tunnel URL:"
-        grep -o 'https://[^ ]*trycloudflare.com' tunnel.log || echo "URL not found!"
+        echo "Your Cloudflare Proxy:"
+        grep -o 'https://.*\.trycloudflare\.com' tunnel.log || echo "URL not found"
         
