--- a/.github/workflows/Cloudflare.yml
+++ b/.github/workflows/Cloudflare.yml
@@ -1,8 +1,7 @@
-name: Tinyproxy + Cloudflare Tunnel
+name: Tinyproxy + Cloudflare
 
 on:
   workflow_dispatch:
-  push:
 
 jobs:
   tunnel:
@@ -12,7 +11,7 @@ jobs:
     - name: Install Tinyproxy
       run: |
         sudo apt update
-        sudo apt install -y tinyproxy curl
+        sudo apt install -y tinyproxy
 
     - name: Configure Tinyproxy
       run: |
@@ -23,23 +22,19 @@ jobs:
         echo "ConnectPort 80" | sudo tee -a /etc/tinyproxy/tinyproxy.conf
         sudo systemctl restart tinyproxy
 
-    - name: Download & Setup Cloudflared
+    - name: Install cloudflared
       run: |
         wget -O cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
         chmod +x cloudflared
         sudo mv cloudflared /usr/local/bin/
 
-    - name: Start Tunnel
+    - name: Start Cloudflare Tunnel
       run: |
-        nohup cloudflared tunnel --url http://localhost:8888 > tunnel.log 2>&1 &
+        cloudflared tunnel --url http://localhost:8888 2>&1 | tee tunnel.log &
         sleep 10
-        curl -s https://trycloudflare.com > cf.txt || true
-        grep -Eo 'https://[-a-z0-9]+\.trycloudflare\.com' cf.txt || echo "Tunnel URL not found"
+        grep -Eo 'https://[-a-z0-9]+\.trycloudflare\.com' tunnel.log || echo "Tunnel URL not found"
 
-    - name: Keep Alive
+    - name: Keep alive
       run: |
-        while true; do
-          echo "Tunnel active..."
-          sleep 300
-        done
+        while true; do sleep 300; done
         
