--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -27,20 +27,28 @@ jobs:
 
       - name: Download & Start Loophole
         run: |
+          # Download and extract
           curl -Lo loophole.tar.gz https://github.com/loophole/cli/releases/download/1.0.0-beta.15/loophole-cli_1.0.0-beta.15_linux_arm64.tar.gz
           tar -xzf loophole.tar.gz
+
+          # List extracted files for debug
+          echo "=== Extracted Files ==="
+          ls -R
+
+          # Move into extracted folder
+          cd loophole-cli_1.0.0-beta.15_linux_arm64
           chmod +x loophole
 
-          # Start Loophole tunnel
-          nohup ./loophole http 8888 > tunnel.log 2>&1 &
+          # Start tunnel in background
+          nohup ./loophole http 8888 > ../tunnel.log 2>&1 &
 
           sleep 15
           echo "=== Loophole Tunnel Log ==="
-          cat tunnel.log || echo "Tunnel failed to start"
+          cat ../tunnel.log || echo "Tunnel failed to start"
 
           echo ""
           echo "=== Extracted Loophole URL ==="
-          grep -Eo 'https://[a-zA-Z0-9.-]+.loophole.site' tunnel.log | head -n 1 || echo "URL not found"
+          grep -Eo 'https://[a-zA-Z0-9.-]+.loophole.site' ../tunnel.log | head -n 1 || echo "URL not found"
 
       - name: Keep Alive
         run: |
